@@ -1,3 +1,9 @@
+2019-05-10  Thomas Koenig  <tkoenig@gcc.gnu.org>
+
+	PR fortran/61968
+	* gfortran.dg/assumed_type_10.f90: New test case.
+	* gfortran.dg/assumed_type_11.f90: New test case.
+
 2019-05-10  Iain Sandoe  <iain@sandoe.co.uk>
 
 	* gcc.target/x86_64/abi/avx512f/abi-avx512f.exp: Darwin is
