@@ -1,3 +1,9 @@
+2019-05-10  Thomas Koenig  <tkoenig@gcc.gnu.org>
+
+	PR fortran/61968
+	* interface.c (compare_actual_formal): Do not create a vtab if
+	the actual argument is assumed type.
+
 2019-05-10  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/90093
